@@ -1,0 +1,22 @@
+/* bug-3745.c
+   A bug in compile-time conversion of large floating-point constants, on host systems with a 32-bit long.
+
+   qual: const, volatile, const volatile,
+*/
+
+#include <stdint.h>
+
+#include <testfwk.h>
+
+// floating-point constant converted to unsigned integer.
+{qual} uint64_t f=1e18;
+
+// integer constant
+{qual} uint64_t i=1000000000000000000;
+
+void
+testBug (void)
+{
+  ASSERT (i * 2 >= f && f >= i / 2);
+}
+
